--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,12 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    
+    "node-fetch": "^3.3.2"
   }
 }
